* Add bus system
* Allow to set any default configuration value from environment
* Clear existing session when password is changed
* Manage session with max_age and timeout
* Use passlib to hash and update password
* Remove unique constraint on attachment name
* New icons
* Add pyson TimeDelta
* Remove button if it is not allowed to access some of its dependant fields
* Add support for Python 3.7
* Add transactional queue and workers
* Add __table_handler__ to ModelSQL
* Support partial index
* Allow to use SQL expression for index action
* Add cache clean timeout configuration
* Implicit conversion to boolean in PYSON statement
* Add domain to dictionary schema
* Fill main language in ir.configuration at database initialization
* Remove support for Python 2.7
* Check Rule also after modification
* Check Rule after indirect fields
* Allow to define view id in switch client action
* Do not validate Function fields even with setter
* Simplify the creation of dependencies graph
* Make depends on methods generic to any method
* Add width/height attribute to notebook
* Allow to call set_lang with None and language instance
* Add hostname configuration to list database
* Add tree mixin
* Rename "install-dependences" into "activate-dependencies"
* Use recursive common table expression for child_of/parent_of operators
* Add sql_cast on Field

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add index method to order field set calls
* Add deactivable mixin
* Ensure active field is present on tree view
* Manage depends xml attribute on field tag
* Add expand attribute on group tag
* Add depends on Pool.register
* Add Exclude constraint
* Allow to perform unaccented searches on Char fields
* Always raise exception in table handler
* Simplify API for Session: new, remove, check and reset
* Ensure that all buttons are registered in ir.model.button
* Make trytond-admin ask for admin email
* Add option to set admin email with trytond-admin